crates/graphql/src/polling/snapshots/lightdotso_graphql__polling__user_operations__test__snapshot_test_query.snap
---
source: crates/graphql/src/polling/user_operations.rs
expression: query.query
---
query GetUserOperationsQuery($minBlock: BigInt!, $minIndex: BigInt!) {
  userOperations(first: 300, where: {blockNumber_gt: $minBlock, index_gt: $minIndex}, orderBy: index) {
    id
    index
    sender
    nonce
    initCode
    callData
    callGasLimit
    verificationGasLimit
    preVerificationGas
    maxFeePerGas
    maxPriorityFeePerGas
    paymasterAndData
    signature
    blockNumber
    blockTimestamp
    transactionHash
    entryPoint
    paymaster
    userOperationEvent {
      id
      index
      userOpHash
      paymaster
      nonce
      transactionHash
    }
    userOperationRevertReason {
      id
      index
      userOpHash
      sender
      nonce
      revertReason
      transactionHash
    }
    lightWallet {
      id
      index
      address
      imageHash
      userOpHash
      sender
      factory
      paymaster
      blockNumber
      blockTimestamp
      transactionHash
    }
    transaction {
      id
      hash
      index
      from
      to
      value
      gasLimit
      gasPrice
      input
      nonce
      receipt {
        id
        transactionHash
        transactionIndex
        blockHash
        blockNumber
        cumulativeGasUsed
        gasUsed
        status
        logsBloom
        logs {
          id
          address
          topics
          data
          blockHash
          blockNumber
          transactionHash
          transactionIndex
          logIndex
        }
      }
    }
    logs {
      id
      address
      topics
      data
      blockHash
      blockNumber
      transactionHash
      transactionIndex
      logIndex
    }
  }
  _meta {
    block {
      number
    }
  }
}
